<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="2dp"
            android:text="@string/correo"
            android:textAlignment="center"
            android:textColor="#0B9FFF"
            android:textSize="34sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/asuntoTextView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/asunto"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iconoImageView2"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginStart="20dp"
                android:paddingLeft="14dp"
                android:paddingRight="14dp"
                android:src="@drawable/w1"/>
            <TextView
                android:id="@+id/nameTextView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/horaTextView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:text="@string/hora"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal">
            <TextView
                android:id="@+id/cuerpoTextView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/cuerpo"
                android:textSize="18sp"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>