<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    app:cardCornerRadius="20dp"
    app:cardElevation="6dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="6dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iconoImageView"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:paddingLeft="14dp"
                android:paddingRight="14dp"
                android:src="@drawable/w1"/>


            <LinearLayout
                android:id="@+id/linearLayout"
                android:orientation="vertical"
                android:layout_width="225dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="2dp"
                android:layout_toEndOf="@+id/iconoImageView">

                <TextView
                    android:id="@+id/nameTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/app_name"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/asuntoTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/asunto"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/cuerpoTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cuerpo"
                    android:textSize="17sp"/>
            </LinearLayout>

            <TextView
                android:id="@+id/horaTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="6dp"
                android:text="@string/hora"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>